# environment

./: README.md
template/cmake/: .gitignore  CMakeLists.txt  Doxyfile.in  build.py  build.sh  clean.py  clean.sh
template/cmake/src/: CMakeLists.txt  main.cpp  version.hpp.in
template/cmake/test/: CMakeLists.txt
vscode/: settings.json
wsl/debian/etc/profile.d/: display.sh
